// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`JSONEditor > render table mode 1`] = `
<div>
  <!---->
  <!---->
   
  <div
    class="jse-main svelte-1l55585"
    role="none"
  >
    <!---->
    <!---->
    <div
      class="jse-table-mode svelte-1p86y3c"
      role="table"
    >
      <div
        class="jse-menu svelte-3erbu0"
      >
        <!---->
         
        <!---->
        <!---->
        <!---->
        <button
          class="jse-button jse-group-button jse-first svelte-3erbu0"
          title="Switch to text mode (current mode: table)"
          type="button"
        >
          <!---->
           
          text
          <!---->
        </button>
        
        
        
        <!---->
        <!---->
        <!---->
        <button
          class="jse-button jse-group-button  svelte-3erbu0"
          title="Switch to tree mode (current mode: table)"
          type="button"
        >
          <!---->
           
          tree
          <!---->
        </button>
        
        
        
        <!---->
        <!---->
        <!---->
        <button
          class="jse-button jse-group-button jse-last jse-selected svelte-3erbu0"
          title="Switch to table mode (current mode: table)"
          type="button"
        >
          <!---->
           
          table
          <!---->
        </button>
        
        
        
        <!---->
        <div
          class="jse-separator svelte-3erbu0"
        />
        
        <!---->
        <!---->
        <!---->
        <button
          class="jse-button jse-sort svelte-3erbu0"
          title="Sort"
          type="button"
        >
          <svg
            aria-label=""
            class="fa-icon  svelte-v67cny"
            height="14.222222222222221"
            role="presentation"
            style=""
            version="1.1"
            viewBox="0 0 576 512"
            width="16"
          >
            <!---->
            <!---->
            <path
              d="M246.6 374.6l-96 96c-12.5 12.5-32.8 12.5-45.3 0l-96-96c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0L96 370.7 96 64c0-17.7 14.3-32 32-32s32 14.3 32 32l0 306.7 41.4-41.4c12.5-12.5 32.8-12.5 45.3 0s12.5 32.8 0 45.3zM320 32l32 0c17.7 0 32 14.3 32 32s-14.3 32-32 32l-32 0c-17.7 0-32-14.3-32-32s14.3-32 32-32zm0 128l96 0c17.7 0 32 14.3 32 32s-14.3 32-32 32l-96 0c-17.7 0-32-14.3-32-32s14.3-32 32-32zm0 128l160 0c17.7 0 32 14.3 32 32s-14.3 32-32 32l-160 0c-17.7 0-32-14.3-32-32s14.3-32 32-32zm0 128l224 0c17.7 0 32 14.3 32 32s-14.3 32-32 32l-224 0c-17.7 0-32-14.3-32-32s14.3-32 32-32z"
            />
            <!---->
            <!---->
            <!---->
            
            <!---->
          </svg>
          <!---->
           
          <!---->
        </button>
        
        
        
        <!---->
        <!---->
        <!---->
        <button
          class="jse-button jse-transform svelte-3erbu0"
          title="Transform contents (filter, sort, project)"
          type="button"
        >
          <svg
            aria-label=""
            class="fa-icon  svelte-v67cny"
            height="16"
            role="presentation"
            style=""
            version="1.1"
            viewBox="0 0 512 512"
            width="16"
          >
            <!---->
            <!---->
            <path
              d="M32 64C19.1 64 7.4 71.8 2.4 83.8S.2 109.5 9.4 118.6L192 301.3 192 416c0 8.5 3.4 16.6 9.4 22.6l64 64c9.2 9.2 22.9 11.9 34.9 6.9S320 492.9 320 480l0-178.7 182.6-182.6c9.2-9.2 11.9-22.9 6.9-34.9S492.9 64 480 64L32 64z"
            />
            <!---->
            <!---->
            <!---->
            
            <!---->
          </svg>
          <!---->
           
          <!---->
        </button>
        
        
        
        <!---->
        <!---->
        <!---->
        <button
          class="jse-button jse-search svelte-3erbu0"
          title="Search (Ctrl+F)"
          type="button"
        >
          <svg
            aria-label=""
            class="fa-icon  svelte-v67cny"
            height="16"
            role="presentation"
            style=""
            version="1.1"
            viewBox="0 0 512 512"
            width="16"
          >
            <!---->
            <!---->
            <path
              d="M416 208c0 45.9-14.9 88.3-40 122.7L502.6 457.4c12.5 12.5 12.5 32.8 0 45.3s-32.8 12.5-45.3 0L330.7 376C296.3 401.1 253.9 416 208 416 93.1 416 0 322.9 0 208S93.1 0 208 0 416 93.1 416 208zM208 352a144 144 0 1 0 0-288 144 144 0 1 0 0 288z"
            />
            <!---->
            <!---->
            <!---->
            
            <!---->
          </svg>
          <!---->
           
          <!---->
        </button>
        
        
        
        <!---->
        <!---->
        <!---->
        <button
          class="jse-button jse-contextmenu svelte-3erbu0"
          title="Open context menu (Click here, right click on the selection, or use the context menu button or Ctrl+Q)"
          type="button"
        >
          <svg
            aria-label=""
            class="fa-icon  svelte-v67cny"
            height="16"
            role="presentation"
            style=""
            version="1.1"
            viewBox="0 0 128 512"
            width="4"
          >
            <!---->
            <!---->
            <path
              d="M64 144a56 56 0 1 1 0-112 56 56 0 1 1 0 112zm0 224c30.9 0 56 25.1 56 56s-25.1 56-56 56-56-25.1-56-56 25.1-56 56-56zm56-112c0 30.9-25.1 56-56 56s-56-25.1-56-56 25.1-56 56-56 56 25.1 56 56z"
            />
            <!---->
            <!---->
            <!---->
            
            <!---->
          </svg>
          <!---->
           
          <!---->
        </button>
        
        
        
        <!---->
        <div
          class="jse-separator svelte-3erbu0"
        />
        
        <!---->
        <!---->
        <!---->
        <button
          class="jse-button jse-undo svelte-3erbu0"
          disabled=""
          title="Undo (Ctrl+Z)"
          type="button"
        >
          <svg
            aria-label=""
            class="fa-icon  svelte-v67cny"
            height="16"
            role="presentation"
            style=""
            version="1.1"
            viewBox="0 0 512 512"
            width="16"
          >
            <!---->
            <!---->
            <path
              d="M256 64c-56.8 0-107.9 24.7-143.1 64l47.1 0c17.7 0 32 14.3 32 32s-14.3 32-32 32L32 192c-17.7 0-32-14.3-32-32L0 32C0 14.3 14.3 0 32 0S64 14.3 64 32l0 54.7C110.9 33.6 179.5 0 256 0 397.4 0 512 114.6 512 256S397.4 512 256 512c-87 0-163.9-43.4-210.1-109.7-10.1-14.5-6.6-34.4 7.9-44.6s34.4-6.6 44.6 7.9c34.8 49.8 92.4 82.3 157.6 82.3 106 0 192-86 192-192S362 64 256 64z"
            />
            <!---->
            <!---->
            <!---->
            
            <!---->
          </svg>
          <!---->
           
          <!---->
        </button>
        
        
        
        <!---->
        <!---->
        <!---->
        <button
          class="jse-button jse-redo svelte-3erbu0"
          disabled=""
          title="Redo (Ctrl+Shift+Z)"
          type="button"
        >
          <svg
            aria-label=""
            class="fa-icon  svelte-v67cny"
            height="16"
            role="presentation"
            style=""
            version="1.1"
            viewBox="0 0 512 512"
            width="16"
          >
            <!---->
            <!---->
            <path
              d="M436.7 74.7L448 85.4 448 32c0-17.7 14.3-32 32-32s32 14.3 32 32l0 128c0 17.7-14.3 32-32 32l-128 0c-17.7 0-32-14.3-32-32s14.3-32 32-32l47.9 0-7.6-7.2c-.2-.2-.4-.4-.6-.6-75-75-196.5-75-271.5 0s-75 196.5 0 271.5 196.5 75 271.5 0c8.2-8.2 15.5-16.9 21.9-26.1 10.1-14.5 30.1-18 44.6-7.9s18 30.1 7.9 44.6c-8.5 12.2-18.2 23.8-29.1 34.7-100 100-262.1 100-362 0S-25 175 75 75c99.9-99.9 261.7-100 361.7-.3z"
            />
            <!---->
            <!---->
            <!---->
            
            <!---->
          </svg>
          <!---->
           
          <!---->
        </button>
        
        
        
        <!---->
        <!---->
        <div
          class="jse-space svelte-3erbu0"
        />
        
        
        <!---->
         
        <!---->
      </div>
      <!---->
       
      <label
        class="jse-hidden-input-label svelte-1p86y3c"
      >
        <input
          class="jse-hidden-input svelte-1p86y3c"
          readonly=""
          tabindex="-1"
          type="text"
        />
      </label>
       
      <div
        class="jse-search-box-container svelte-1p86y3c"
      >
        <!---->
        
        <!---->
      </div>
       
      <div
        class="jse-contents svelte-1p86y3c"
      >
        <table
          class="jse-table-main svelte-1p86y3c"
        >
          <tbody>
            <tr
              class="jse-table-row jse-table-row-header svelte-1p86y3c"
            >
              <th
                class="jse-table-cell jse-table-cell-header svelte-1p86y3c"
              >
                <!---->
              </th>
              <th
                class="jse-table-cell jse-table-cell-header svelte-1p86y3c"
              >
                <button
                  class="jse-column-header svelte-5pxwfq"
                  title="id (Click to sort the data by this column)"
                  type="button"
                >
                  <span
                    class="jse-column-name"
                  >
                    id
                  </span>
                   
                  <!---->
                </button>
                <!---->
              </th>
              <th
                class="jse-table-cell jse-table-cell-header svelte-1p86y3c"
              >
                <button
                  class="jse-column-header svelte-5pxwfq"
                  title="name (Click to sort the data by this column)"
                  type="button"
                >
                  <span
                    class="jse-column-name"
                  >
                    name
                  </span>
                   
                  <!---->
                </button>
                <!---->
              </th>
              <!---->
              <!---->
            </tr>
            <tr
              class="jse-table-invisible-start-section svelte-1p86y3c"
            >
              <td
                class="svelte-1p86y3c"
                colspan="2"
                style="height: 0px;"
              />
            </tr>
            <tr
              class="jse-table-row svelte-1p86y3c"
            >
              <th
                class="jse-table-cell jse-table-cell-gutter svelte-1p86y3c"
              >
                0 
                <!---->
              </th>
              <!---->
              <td
                class="jse-table-cell svelte-1p86y3c"
                data-path="%2F0%2Fid"
              >
                <div
                  class="jse-value-outer svelte-1p86y3c"
                >
                  <!---->
                  <!---->
                  <!---->
                  <div
                    class="jse-value jse-number jse-table-cell svelte-1saqp8c"
                    data-type="selectable-value"
                    role="button"
                    tabindex="-1"
                  >
                    1
                    <!---->
                     
                    <!---->
                  </div>
                  
                  
                  
                  <!---->
                  <!---->
                </div>
                 
                <!---->
              </td>
              <td
                class="jse-table-cell svelte-1p86y3c"
                data-path="%2F0%2Fname"
              >
                <div
                  class="jse-value-outer svelte-1p86y3c"
                >
                  <!---->
                  <!---->
                  <!---->
                  <div
                    class="jse-value jse-string jse-empty jse-table-cell svelte-1saqp8c"
                    data-type="selectable-value"
                    role="button"
                    tabindex="-1"
                  >
                    
                    <!---->
                     
                    <!---->
                  </div>
                  
                  
                  
                  <!---->
                  <!---->
                </div>
                 
                <!---->
              </td>
              <!---->
              <!---->
            </tr>
            <tr
              class="jse-table-row svelte-1p86y3c"
            >
              <th
                class="jse-table-cell jse-table-cell-gutter svelte-1p86y3c"
              >
                1 
                <!---->
              </th>
              <!---->
              <td
                class="jse-table-cell svelte-1p86y3c"
                data-path="%2F1%2Fid"
              >
                <div
                  class="jse-value-outer svelte-1p86y3c"
                >
                  <!---->
                  <!---->
                  <!---->
                  <div
                    class="jse-value jse-number jse-table-cell svelte-1saqp8c"
                    data-type="selectable-value"
                    role="button"
                    tabindex="-1"
                  >
                    2
                    <!---->
                     
                    <!---->
                  </div>
                  
                  
                  
                  <!---->
                  <!---->
                </div>
                 
                <!---->
              </td>
              <td
                class="jse-table-cell svelte-1p86y3c"
                data-path="%2F1%2Fname"
              >
                <div
                  class="jse-value-outer svelte-1p86y3c"
                >
                  <!---->
                  <!---->
                  <!---->
                  <div
                    class="jse-value jse-string jse-table-cell svelte-1saqp8c"
                    data-type="selectable-value"
                    role="button"
                    tabindex="-1"
                  >
                    Joe
                    <!---->
                     
                    <!---->
                  </div>
                  
                  
                  
                  <!---->
                  <!---->
                </div>
                 
                <!---->
              </td>
              <!---->
              <!---->
            </tr>
            <tr
              class="jse-table-row svelte-1p86y3c"
            >
              <th
                class="jse-table-cell jse-table-cell-gutter svelte-1p86y3c"
              >
                2 
                <!---->
              </th>
              <!---->
              <td
                class="jse-table-cell svelte-1p86y3c"
                data-path="%2F2%2Fid"
              >
                <div
                  class="jse-value-outer svelte-1p86y3c"
                >
                  <!---->
                  <!---->
                  <!---->
                  <div
                    class="jse-value jse-number jse-table-cell svelte-1saqp8c"
                    data-type="selectable-value"
                    role="button"
                    tabindex="-1"
                  >
                    3
                    <!---->
                     
                    <!---->
                  </div>
                  
                  
                  
                  <!---->
                  <!---->
                </div>
                 
                <!---->
              </td>
              <td
                class="jse-table-cell svelte-1p86y3c"
                data-path="%2F2%2Fname"
              >
                <div
                  class="jse-value-outer svelte-1p86y3c"
                >
                  <!---->
                  <!---->
                  <!---->
                  <div
                    class="jse-value jse-string jse-empty jse-table-cell svelte-1saqp8c"
                    data-type="selectable-value"
                    role="button"
                    tabindex="-1"
                  >
                    
                    <!---->
                     
                    <!---->
                  </div>
                  
                  
                  
                  <!---->
                  <!---->
                </div>
                 
                <!---->
              </td>
              <!---->
              <!---->
            </tr>
            <!---->
            <tr
              class="jse-table-invisible-end-section svelte-1p86y3c"
            >
              <td
                class="svelte-1p86y3c"
                colspan="2"
                style="height: 0px;"
              />
            </tr>
          </tbody>
        </table>
      </div>
       
      <!---->
       
      <!---->
       
      <!---->
       
      <!---->
      
      <!---->
      <!---->
      <!---->
    </div>
     
    <!---->
     
    <!---->
    
    
    <!---->
  </div>
   
  <!---->
   
  <!---->
   
  <!---->
  <!---->
  
</div>
`;

exports[`JSONEditor > render text mode 1`] = `
<div>
  <!---->
  <!---->
   
  <div
    class="jse-main svelte-1l55585"
    role="none"
  >
    <!---->
    <div
      class="jse-text-mode svelte-k2b9e6"
    >
      <div
        class="jse-menu svelte-3erbu0"
      >
        <!---->
         
        <!---->
        <!---->
        <!---->
        <button
          class="jse-button jse-group-button jse-first jse-selected svelte-3erbu0"
          title="Switch to text mode (current mode: text)"
          type="button"
        >
          <!---->
           
          text
          <!---->
        </button>
        
        
        
        <!---->
        <!---->
        <!---->
        <button
          class="jse-button jse-group-button  svelte-3erbu0"
          title="Switch to tree mode (current mode: text)"
          type="button"
        >
          <!---->
           
          tree
          <!---->
        </button>
        
        
        
        <!---->
        <!---->
        <!---->
        <button
          class="jse-button jse-group-button jse-last svelte-3erbu0"
          title="Switch to table mode (current mode: text)"
          type="button"
        >
          <!---->
           
          table
          <!---->
        </button>
        
        
        
        <!---->
        <div
          class="jse-separator svelte-3erbu0"
        />
        
        <!---->
        <!---->
        <!---->
        <button
          class="jse-button jse-expand-all svelte-3erbu0"
          title="Expand all"
          type="button"
        >
          <svg
            aria-label=""
            class="fa-icon  svelte-v67cny"
            height="16"
            role="presentation"
            style=""
            version="1.1"
            viewBox="0 0 512 512"
            width="16"
          >
            <!---->
            <!---->
            <path
              d="M 0,448 V 512 h 512 v -64 z M 0,0 V 64 H 512 V 0 Z M 256,96 128,224 h 256 z M 256,416 384,288 H 128 Z"
            />
            <!---->
            <!---->
            <!---->
            
            <!---->
          </svg>
          <!---->
           
          <!---->
        </button>
        
        
        
        <!---->
        <!---->
        <!---->
        <button
          class="jse-button jse-collapse-all svelte-3erbu0"
          title="Collapse all"
          type="button"
        >
          <svg
            aria-label=""
            class="fa-icon  svelte-v67cny"
            height="16"
            role="presentation"
            style=""
            version="1.1"
            viewBox="0 0 512 512"
            width="16"
          >
            <!---->
            <!---->
            <path
              d="m 0,224 v 64 h 512 v -64 z M 256,192 384,64 H 128 Z M 256,320 128,448 h 256 z"
            />
            <!---->
            <!---->
            <!---->
            
            <!---->
          </svg>
          <!---->
           
          <!---->
        </button>
        
        
        
        <!---->
        <div
          class="jse-separator svelte-3erbu0"
        />
        
        <!---->
        <!---->
        <!---->
        <button
          class="jse-button jse-format svelte-3erbu0"
          title="Format JSON: add proper indentation and new lines (Ctrl+I)"
          type="button"
        >
          <svg
            aria-label=""
            class="fa-icon  svelte-v67cny"
            height="16"
            role="presentation"
            style=""
            version="1.1"
            viewBox="0 0 512 512"
            width="16"
          >
            <!---->
            <!---->
            <path
              d="M 0,32 v 64 h 416 v -64 z M 160,160 v 64 h 352 v -64 z M 160,288 v 64 h 288 v -64 z M 0,416 v 64 h 320 v -64 z"
            />
            <!---->
            <!---->
            <!---->
            
            <!---->
          </svg>
          <!---->
           
          <!---->
        </button>
        
        
        
        <!---->
        <!---->
        <!---->
        <button
          class="jse-button jse-compact svelte-3erbu0"
          title="Compact JSON: remove all white spacing and new lines (Ctrl+Shift+I)"
          type="button"
        >
          <svg
            aria-label=""
            class="fa-icon  svelte-v67cny"
            height="16"
            role="presentation"
            style=""
            version="1.1"
            viewBox="0 0 512 512"
            width="16"
          >
            <!---->
            <!---->
            <path
              d="M 0,32 v 64 h 512 v -64 z M 0,160 v 64 h 512 v -64 z M 0,288 v 64 h 352 v -64 z"
            />
            <!---->
            <!---->
            <!---->
            
            <!---->
          </svg>
          <!---->
           
          <!---->
        </button>
        
        
        
        <!---->
        <div
          class="jse-separator svelte-3erbu0"
        />
        
        <!---->
        <!---->
        <!---->
        <button
          class="jse-button jse-sort svelte-3erbu0"
          title="Sort"
          type="button"
        >
          <svg
            aria-label=""
            class="fa-icon  svelte-v67cny"
            height="14.222222222222221"
            role="presentation"
            style=""
            version="1.1"
            viewBox="0 0 576 512"
            width="16"
          >
            <!---->
            <!---->
            <path
              d="M246.6 374.6l-96 96c-12.5 12.5-32.8 12.5-45.3 0l-96-96c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0L96 370.7 96 64c0-17.7 14.3-32 32-32s32 14.3 32 32l0 306.7 41.4-41.4c12.5-12.5 32.8-12.5 45.3 0s12.5 32.8 0 45.3zM320 32l32 0c17.7 0 32 14.3 32 32s-14.3 32-32 32l-32 0c-17.7 0-32-14.3-32-32s14.3-32 32-32zm0 128l96 0c17.7 0 32 14.3 32 32s-14.3 32-32 32l-96 0c-17.7 0-32-14.3-32-32s14.3-32 32-32zm0 128l160 0c17.7 0 32 14.3 32 32s-14.3 32-32 32l-160 0c-17.7 0-32-14.3-32-32s14.3-32 32-32zm0 128l224 0c17.7 0 32 14.3 32 32s-14.3 32-32 32l-224 0c-17.7 0-32-14.3-32-32s14.3-32 32-32z"
            />
            <!---->
            <!---->
            <!---->
            
            <!---->
          </svg>
          <!---->
           
          <!---->
        </button>
        
        
        
        <!---->
        <!---->
        <!---->
        <button
          class="jse-button jse-transform svelte-3erbu0"
          title="Transform contents (filter, sort, project)"
          type="button"
        >
          <svg
            aria-label=""
            class="fa-icon  svelte-v67cny"
            height="16"
            role="presentation"
            style=""
            version="1.1"
            viewBox="0 0 512 512"
            width="16"
          >
            <!---->
            <!---->
            <path
              d="M32 64C19.1 64 7.4 71.8 2.4 83.8S.2 109.5 9.4 118.6L192 301.3 192 416c0 8.5 3.4 16.6 9.4 22.6l64 64c9.2 9.2 22.9 11.9 34.9 6.9S320 492.9 320 480l0-178.7 182.6-182.6c9.2-9.2 11.9-22.9 6.9-34.9S492.9 64 480 64L32 64z"
            />
            <!---->
            <!---->
            <!---->
            
            <!---->
          </svg>
          <!---->
           
          <!---->
        </button>
        
        
        
        <!---->
        <!---->
        <!---->
        <button
          class="jse-button jse-search svelte-3erbu0"
          title="Search (Ctrl+F)"
          type="button"
        >
          <svg
            aria-label=""
            class="fa-icon  svelte-v67cny"
            height="16"
            role="presentation"
            style=""
            version="1.1"
            viewBox="0 0 512 512"
            width="16"
          >
            <!---->
            <!---->
            <path
              d="M416 208c0 45.9-14.9 88.3-40 122.7L502.6 457.4c12.5 12.5 12.5 32.8 0 45.3s-32.8 12.5-45.3 0L330.7 376C296.3 401.1 253.9 416 208 416 93.1 416 0 322.9 0 208S93.1 0 208 0 416 93.1 416 208zM208 352a144 144 0 1 0 0-288 144 144 0 1 0 0 288z"
            />
            <!---->
            <!---->
            <!---->
            
            <!---->
          </svg>
          <!---->
           
          <!---->
        </button>
        
        
        
        <!---->
        <div
          class="jse-separator svelte-3erbu0"
        />
        
        <!---->
        <!---->
        <!---->
        <button
          class="jse-button jse-undo svelte-3erbu0"
          disabled=""
          title="Undo (Ctrl+Z)"
          type="button"
        >
          <svg
            aria-label=""
            class="fa-icon  svelte-v67cny"
            height="16"
            role="presentation"
            style=""
            version="1.1"
            viewBox="0 0 512 512"
            width="16"
          >
            <!---->
            <!---->
            <path
              d="M256 64c-56.8 0-107.9 24.7-143.1 64l47.1 0c17.7 0 32 14.3 32 32s-14.3 32-32 32L32 192c-17.7 0-32-14.3-32-32L0 32C0 14.3 14.3 0 32 0S64 14.3 64 32l0 54.7C110.9 33.6 179.5 0 256 0 397.4 0 512 114.6 512 256S397.4 512 256 512c-87 0-163.9-43.4-210.1-109.7-10.1-14.5-6.6-34.4 7.9-44.6s34.4-6.6 44.6 7.9c34.8 49.8 92.4 82.3 157.6 82.3 106 0 192-86 192-192S362 64 256 64z"
            />
            <!---->
            <!---->
            <!---->
            
            <!---->
          </svg>
          <!---->
           
          <!---->
        </button>
        
        
        
        <!---->
        <!---->
        <!---->
        <button
          class="jse-button jse-redo svelte-3erbu0"
          disabled=""
          title="Redo (Ctrl+Shift+Z)"
          type="button"
        >
          <svg
            aria-label=""
            class="fa-icon  svelte-v67cny"
            height="16"
            role="presentation"
            style=""
            version="1.1"
            viewBox="0 0 512 512"
            width="16"
          >
            <!---->
            <!---->
            <path
              d="M436.7 74.7L448 85.4 448 32c0-17.7 14.3-32 32-32s32 14.3 32 32l0 128c0 17.7-14.3 32-32 32l-128 0c-17.7 0-32-14.3-32-32s14.3-32 32-32l47.9 0-7.6-7.2c-.2-.2-.4-.4-.6-.6-75-75-196.5-75-271.5 0s-75 196.5 0 271.5 196.5 75 271.5 0c8.2-8.2 15.5-16.9 21.9-26.1 10.1-14.5 30.1-18 44.6-7.9s18 30.1 7.9 44.6c-8.5 12.2-18.2 23.8-29.1 34.7-100 100-262.1 100-362 0S-25 175 75 75c99.9-99.9 261.7-100 361.7-.3z"
            />
            <!---->
            <!---->
            <!---->
            
            <!---->
          </svg>
          <!---->
           
          <!---->
        </button>
        
        
        
        <!---->
        <!---->
        <div
          class="jse-space svelte-3erbu0"
        />
        
        
        <!---->
         
        <!---->
      </div>
      <!---->
       
      <!---->
       
      <div
        class="jse-contents svelte-k2b9e6"
      >
        <div
          class="cm-editor ͼ1 ͼ2 ͼ4 ͼt"
        >
          <div
            aria-live="polite"
            class="cm-announced"
          />
          <div
            class="cm-scroller"
            tabindex="-1"
          >
            <div
              aria-hidden="true"
              class="cm-gutters cm-gutters-before"
              style="min-height: 168px; position: sticky;"
            >
              <div
                class="cm-gutter cm-gutter-lint"
              >
                <div
                  class="cm-gutterElement cm-activeLineGutter"
                  style="height: 14px;"
                />
              </div>
              <div
                class="cm-gutter cm-lineNumbers"
              >
                <div
                  class="cm-gutterElement"
                  style="height: 0px; visibility: hidden; pointer-events: none;"
                >
                  99
                </div>
                <div
                  class="cm-gutterElement cm-activeLineGutter"
                  style="height: 14px;"
                >
                  1
                </div>
                <div
                  class="cm-gutterElement"
                  style="height: 14px;"
                >
                  2
                </div>
                <div
                  class="cm-gutterElement"
                  style="height: 14px;"
                >
                  3
                </div>
                <div
                  class="cm-gutterElement"
                  style="height: 14px;"
                >
                  4
                </div>
                <div
                  class="cm-gutterElement"
                  style="height: 14px;"
                >
                  5
                </div>
                <div
                  class="cm-gutterElement"
                  style="height: 14px;"
                >
                  6
                </div>
                <div
                  class="cm-gutterElement"
                  style="height: 14px;"
                >
                  7
                </div>
                <div
                  class="cm-gutterElement"
                  style="height: 14px;"
                >
                  8
                </div>
                <div
                  class="cm-gutterElement"
                  style="height: 14px;"
                >
                  9
                </div>
                <div
                  class="cm-gutterElement"
                  style="height: 14px;"
                >
                  10
                </div>
                <div
                  class="cm-gutterElement"
                  style="height: 14px;"
                >
                  11
                </div>
                <div
                  class="cm-gutterElement"
                  style="height: 14px;"
                >
                  12
                </div>
              </div>
              <div
                class="cm-gutter cm-foldGutter"
              >
                <div
                  class="cm-gutterElement"
                  style="height: 0px; visibility: hidden; pointer-events: none;"
                >
                  <span
                    title="Unfold line"
                  >
                    ›
                  </span>
                </div>
                <div
                  class="cm-gutterElement cm-activeLineGutter"
                  style="height: 14px;"
                >
                  <span
                    title="Fold line"
                  >
                    ⌄
                  </span>
                </div>
                <div
                  class="cm-gutterElement"
                  style="height: 14px;"
                >
                  <span
                    title="Fold line"
                  >
                    ⌄
                  </span>
                </div>
                <div
                  class="cm-gutterElement"
                  style="height: 14px; margin-top: 28px;"
                >
                  <span
                    title="Fold line"
                  >
                    ⌄
                  </span>
                </div>
                <div
                  class="cm-gutterElement"
                  style="height: 14px; margin-top: 42px;"
                >
                  <span
                    title="Fold line"
                  >
                    ⌄
                  </span>
                </div>
              </div>
            </div>
            <div
              aria-multiline="true"
              autocapitalize="off"
              autocorrect="off"
              class="cm-content cm-lineWrapping"
              contenteditable="true"
              data-language="json"
              role="textbox"
              spellcheck="false"
              style="tab-size: 4;"
              translate="no"
              writingsuggestions="false"
            >
              <div
                class="cm-line cm-activeLine"
              >
                [
              </div>
              <div
                class="cm-line cm-indent-markers"
                style="--indent-markers: repeating-linear-gradient(to right, var(--indent-marker-active-bg-color) 0 1px, transparent 1px 2ch) 0.5ch/calc(2ch - 1px) no-repeat;"
              >
                  {
              </div>
              <div
                class="cm-line cm-indent-markers"
                style="--indent-markers: repeating-linear-gradient(to right, var(--indent-marker-active-bg-color) 0 1px, transparent 1px 2ch) 0.5ch/calc(2ch - 1px) no-repeat,repeating-linear-gradient(to right, var(--indent-marker-bg-color) 0 1px, transparent 1px 2ch) 2.5ch/calc(2ch - 1px) no-repeat;"
              >
                    
                <span
                  class="ͼo"
                >
                  "id"
                </span>
                : 
                <span
                  class="ͼp"
                >
                  1
                </span>
              </div>
              <div
                class="cm-line cm-indent-markers"
                style="--indent-markers: repeating-linear-gradient(to right, var(--indent-marker-active-bg-color) 0 1px, transparent 1px 2ch) 0.5ch/calc(2ch - 1px) no-repeat;"
              >
                  },
              </div>
              <div
                class="cm-line cm-indent-markers"
                style="--indent-markers: repeating-linear-gradient(to right, var(--indent-marker-active-bg-color) 0 1px, transparent 1px 2ch) 0.5ch/calc(2ch - 1px) no-repeat;"
              >
                  {
              </div>
              <div
                class="cm-line cm-indent-markers"
                style="--indent-markers: repeating-linear-gradient(to right, var(--indent-marker-active-bg-color) 0 1px, transparent 1px 2ch) 0.5ch/calc(2ch - 1px) no-repeat,repeating-linear-gradient(to right, var(--indent-marker-bg-color) 0 1px, transparent 1px 2ch) 2.5ch/calc(2ch - 1px) no-repeat;"
              >
                    
                <span
                  class="ͼo"
                >
                  "id"
                </span>
                : 
                <span
                  class="ͼp"
                >
                  2
                </span>
                ,
              </div>
              <div
                class="cm-line cm-indent-markers"
                style="--indent-markers: repeating-linear-gradient(to right, var(--indent-marker-active-bg-color) 0 1px, transparent 1px 2ch) 0.5ch/calc(2ch - 1px) no-repeat,repeating-linear-gradient(to right, var(--indent-marker-bg-color) 0 1px, transparent 1px 2ch) 2.5ch/calc(2ch - 1px) no-repeat;"
              >
                    
                <span
                  class="ͼo"
                >
                  "name"
                </span>
                : 
                <span
                  class="ͼr"
                >
                  "Joe"
                </span>
              </div>
              <div
                class="cm-line cm-indent-markers"
                style="--indent-markers: repeating-linear-gradient(to right, var(--indent-marker-active-bg-color) 0 1px, transparent 1px 2ch) 0.5ch/calc(2ch - 1px) no-repeat;"
              >
                  },
              </div>
              <div
                class="cm-line cm-indent-markers"
                style="--indent-markers: repeating-linear-gradient(to right, var(--indent-marker-active-bg-color) 0 1px, transparent 1px 2ch) 0.5ch/calc(2ch - 1px) no-repeat;"
              >
                  {
              </div>
              <div
                class="cm-line cm-indent-markers"
                style="--indent-markers: repeating-linear-gradient(to right, var(--indent-marker-active-bg-color) 0 1px, transparent 1px 2ch) 0.5ch/calc(2ch - 1px) no-repeat,repeating-linear-gradient(to right, var(--indent-marker-bg-color) 0 1px, transparent 1px 2ch) 2.5ch/calc(2ch - 1px) no-repeat;"
              >
                    
                <span
                  class="ͼo"
                >
                  "id"
                </span>
                : 
                <span
                  class="ͼp"
                >
                  3
                </span>
              </div>
              <div
                class="cm-line cm-indent-markers"
                style="--indent-markers: repeating-linear-gradient(to right, var(--indent-marker-active-bg-color) 0 1px, transparent 1px 2ch) 0.5ch/calc(2ch - 1px) no-repeat;"
              >
                  }
              </div>
              <div
                class="cm-line"
              >
                ]
              </div>
            </div>
            <div
              aria-hidden="true"
              class="cm-layer cm-layer-above cm-cursorLayer"
              style="z-index: 150; animation-duration: 1200ms;"
            />
            <div
              aria-hidden="true"
              class="cm-layer cm-selectionLayer"
              style="z-index: -2;"
            />
          </div>
        </div>
      </div>
       
      <!---->
       
      <!---->
      <div
        class="jse-status-bar svelte-1pmgv9j"
      >
        <!---->
         
        <!---->
         
        <!---->
      </div>
      <!---->
       
      <!---->
       
      <!---->
       
      <!---->
      
      <!---->
      <!---->
      <!---->
    </div>
    
    <!---->
  </div>
   
  <!---->
   
  <!---->
   
  <!---->
  <!---->
  
</div>
`;

exports[`JSONEditor > render tree mode 1`] = `
<div>
  <!---->
  <!---->
   
  <div
    class="jse-main svelte-1l55585"
    role="none"
  >
    <!---->
    <!---->
    <div
      class="jse-tree-mode svelte-10mlrw4"
      role="tree"
      tabindex="-1"
    >
      <div
        class="jse-menu svelte-3erbu0"
      >
        <!---->
         
        <!---->
        <!---->
        <!---->
        <button
          class="jse-button jse-group-button jse-first svelte-3erbu0"
          title="Switch to text mode (current mode: tree)"
          type="button"
        >
          <!---->
           
          text
          <!---->
        </button>
        
        
        
        <!---->
        <!---->
        <!---->
        <button
          class="jse-button jse-group-button  jse-selected svelte-3erbu0"
          title="Switch to tree mode (current mode: tree)"
          type="button"
        >
          <!---->
           
          tree
          <!---->
        </button>
        
        
        
        <!---->
        <!---->
        <!---->
        <button
          class="jse-button jse-group-button jse-last svelte-3erbu0"
          title="Switch to table mode (current mode: tree)"
          type="button"
        >
          <!---->
           
          table
          <!---->
        </button>
        
        
        
        <!---->
        <div
          class="jse-separator svelte-3erbu0"
        />
        
        <!---->
        <!---->
        <!---->
        <button
          class="jse-button jse-expand-all svelte-3erbu0"
          title="Expand all"
          type="button"
        >
          <svg
            aria-label=""
            class="fa-icon  svelte-v67cny"
            height="16"
            role="presentation"
            style=""
            version="1.1"
            viewBox="0 0 512 512"
            width="16"
          >
            <!---->
            <!---->
            <path
              d="M 0,448 V 512 h 512 v -64 z M 0,0 V 64 H 512 V 0 Z M 256,96 128,224 h 256 z M 256,416 384,288 H 128 Z"
            />
            <!---->
            <!---->
            <!---->
            
            <!---->
          </svg>
          <!---->
           
          <!---->
        </button>
        
        
        
        <!---->
        <!---->
        <!---->
        <button
          class="jse-button jse-collapse-all svelte-3erbu0"
          title="Collapse all"
          type="button"
        >
          <svg
            aria-label=""
            class="fa-icon  svelte-v67cny"
            height="16"
            role="presentation"
            style=""
            version="1.1"
            viewBox="0 0 512 512"
            width="16"
          >
            <!---->
            <!---->
            <path
              d="m 0,224 v 64 h 512 v -64 z M 256,192 384,64 H 128 Z M 256,320 128,448 h 256 z"
            />
            <!---->
            <!---->
            <!---->
            
            <!---->
          </svg>
          <!---->
           
          <!---->
        </button>
        
        
        
        <!---->
        <div
          class="jse-separator svelte-3erbu0"
        />
        
        <!---->
        <!---->
        <!---->
        <button
          class="jse-button jse-sort svelte-3erbu0"
          title="Sort"
          type="button"
        >
          <svg
            aria-label=""
            class="fa-icon  svelte-v67cny"
            height="14.222222222222221"
            role="presentation"
            style=""
            version="1.1"
            viewBox="0 0 576 512"
            width="16"
          >
            <!---->
            <!---->
            <path
              d="M246.6 374.6l-96 96c-12.5 12.5-32.8 12.5-45.3 0l-96-96c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0L96 370.7 96 64c0-17.7 14.3-32 32-32s32 14.3 32 32l0 306.7 41.4-41.4c12.5-12.5 32.8-12.5 45.3 0s12.5 32.8 0 45.3zM320 32l32 0c17.7 0 32 14.3 32 32s-14.3 32-32 32l-32 0c-17.7 0-32-14.3-32-32s14.3-32 32-32zm0 128l96 0c17.7 0 32 14.3 32 32s-14.3 32-32 32l-96 0c-17.7 0-32-14.3-32-32s14.3-32 32-32zm0 128l160 0c17.7 0 32 14.3 32 32s-14.3 32-32 32l-160 0c-17.7 0-32-14.3-32-32s14.3-32 32-32zm0 128l224 0c17.7 0 32 14.3 32 32s-14.3 32-32 32l-224 0c-17.7 0-32-14.3-32-32s14.3-32 32-32z"
            />
            <!---->
            <!---->
            <!---->
            
            <!---->
          </svg>
          <!---->
           
          <!---->
        </button>
        
        
        
        <!---->
        <!---->
        <!---->
        <button
          class="jse-button jse-transform svelte-3erbu0"
          title="Transform contents (filter, sort, project)"
          type="button"
        >
          <svg
            aria-label=""
            class="fa-icon  svelte-v67cny"
            height="16"
            role="presentation"
            style=""
            version="1.1"
            viewBox="0 0 512 512"
            width="16"
          >
            <!---->
            <!---->
            <path
              d="M32 64C19.1 64 7.4 71.8 2.4 83.8S.2 109.5 9.4 118.6L192 301.3 192 416c0 8.5 3.4 16.6 9.4 22.6l64 64c9.2 9.2 22.9 11.9 34.9 6.9S320 492.9 320 480l0-178.7 182.6-182.6c9.2-9.2 11.9-22.9 6.9-34.9S492.9 64 480 64L32 64z"
            />
            <!---->
            <!---->
            <!---->
            
            <!---->
          </svg>
          <!---->
           
          <!---->
        </button>
        
        
        
        <!---->
        <!---->
        <!---->
        <button
          class="jse-button jse-search svelte-3erbu0"
          title="Search (Ctrl+F)"
          type="button"
        >
          <svg
            aria-label=""
            class="fa-icon  svelte-v67cny"
            height="16"
            role="presentation"
            style=""
            version="1.1"
            viewBox="0 0 512 512"
            width="16"
          >
            <!---->
            <!---->
            <path
              d="M416 208c0 45.9-14.9 88.3-40 122.7L502.6 457.4c12.5 12.5 12.5 32.8 0 45.3s-32.8 12.5-45.3 0L330.7 376C296.3 401.1 253.9 416 208 416 93.1 416 0 322.9 0 208S93.1 0 208 0 416 93.1 416 208zM208 352a144 144 0 1 0 0-288 144 144 0 1 0 0 288z"
            />
            <!---->
            <!---->
            <!---->
            
            <!---->
          </svg>
          <!---->
           
          <!---->
        </button>
        
        
        
        <!---->
        <!---->
        <!---->
        <button
          class="jse-button jse-contextmenu svelte-3erbu0"
          title="Open context menu (Click here, right click on the selection, or use the context menu button or Ctrl+Q)"
          type="button"
        >
          <svg
            aria-label=""
            class="fa-icon  svelte-v67cny"
            height="16"
            role="presentation"
            style=""
            version="1.1"
            viewBox="0 0 128 512"
            width="4"
          >
            <!---->
            <!---->
            <path
              d="M64 144a56 56 0 1 1 0-112 56 56 0 1 1 0 112zm0 224c30.9 0 56 25.1 56 56s-25.1 56-56 56-56-25.1-56-56 25.1-56 56-56zm56-112c0 30.9-25.1 56-56 56s-56-25.1-56-56 25.1-56 56-56 56 25.1 56 56z"
            />
            <!---->
            <!---->
            <!---->
            
            <!---->
          </svg>
          <!---->
           
          <!---->
        </button>
        
        
        
        <!---->
        <div
          class="jse-separator svelte-3erbu0"
        />
        
        <!---->
        <!---->
        <!---->
        <button
          class="jse-button jse-undo svelte-3erbu0"
          disabled=""
          title="Undo (Ctrl+Z)"
          type="button"
        >
          <svg
            aria-label=""
            class="fa-icon  svelte-v67cny"
            height="16"
            role="presentation"
            style=""
            version="1.1"
            viewBox="0 0 512 512"
            width="16"
          >
            <!---->
            <!---->
            <path
              d="M256 64c-56.8 0-107.9 24.7-143.1 64l47.1 0c17.7 0 32 14.3 32 32s-14.3 32-32 32L32 192c-17.7 0-32-14.3-32-32L0 32C0 14.3 14.3 0 32 0S64 14.3 64 32l0 54.7C110.9 33.6 179.5 0 256 0 397.4 0 512 114.6 512 256S397.4 512 256 512c-87 0-163.9-43.4-210.1-109.7-10.1-14.5-6.6-34.4 7.9-44.6s34.4-6.6 44.6 7.9c34.8 49.8 92.4 82.3 157.6 82.3 106 0 192-86 192-192S362 64 256 64z"
            />
            <!---->
            <!---->
            <!---->
            
            <!---->
          </svg>
          <!---->
           
          <!---->
        </button>
        
        
        
        <!---->
        <!---->
        <!---->
        <button
          class="jse-button jse-redo svelte-3erbu0"
          disabled=""
          title="Redo (Ctrl+Shift+Z)"
          type="button"
        >
          <svg
            aria-label=""
            class="fa-icon  svelte-v67cny"
            height="16"
            role="presentation"
            style=""
            version="1.1"
            viewBox="0 0 512 512"
            width="16"
          >
            <!---->
            <!---->
            <path
              d="M436.7 74.7L448 85.4 448 32c0-17.7 14.3-32 32-32s32 14.3 32 32l0 128c0 17.7-14.3 32-32 32l-128 0c-17.7 0-32-14.3-32-32s14.3-32 32-32l47.9 0-7.6-7.2c-.2-.2-.4-.4-.6-.6-75-75-196.5-75-271.5 0s-75 196.5 0 271.5 196.5 75 271.5 0c8.2-8.2 15.5-16.9 21.9-26.1 10.1-14.5 30.1-18 44.6-7.9s18 30.1 7.9 44.6c-8.5 12.2-18.2 23.8-29.1 34.7-100 100-262.1 100-362 0S-25 175 75 75c99.9-99.9 261.7-100 361.7-.3z"
            />
            <!---->
            <!---->
            <!---->
            
            <!---->
          </svg>
          <!---->
           
          <!---->
        </button>
        
        
        
        <!---->
        <!---->
        <div
          class="jse-space svelte-3erbu0"
        />
        
        
        <!---->
         
        <!---->
      </div>
      <!---->
       
      <div
        class="jse-navigation-bar svelte-hjhal6"
      >
        <!---->
        <!---->
         
        <div
          class="jse-navigation-bar-item svelte-13sijxb"
        >
          <button
            class="jse-navigation-bar-button jse-navigation-bar-arrow svelte-13sijxb"
            type="button"
          >
            <svg
              aria-label=""
              class="fa-icon  svelte-v67cny"
              height="16"
              role="presentation"
              style=""
              version="1.1"
              viewBox="0 0 256 512"
              width="8"
            >
              <!---->
              <!---->
              <path
                d="M247.1 233.4c12.5 12.5 12.5 32.8 0 45.3l-160 160c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3L179.2 256 41.9 118.6c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0l160 160z"
              />
              <!---->
              <!---->
              <!---->
              
              <!---->
            </svg>
            <!---->
          </button>
           
          <!---->
        </div>
        <!---->
        <!---->
         
        <button
          class="jse-navigation-bar-edit svelte-hjhal6 flex"
          title="Edit the selected path"
          type="button"
        >
          <span
            class="jse-navigation-bar-space svelte-hjhal6"
          >
             
          </span>
           
          <svg
            aria-label=""
            class="fa-icon  svelte-v67cny"
            height="16"
            role="presentation"
            style=""
            version="1.1"
            viewBox="0 0 512 512"
            width="16"
          >
            <!---->
            <!---->
            <path
              d="M471.6 21.7c-21.9-21.9-57.3-21.9-79.2 0L368 46.1 465.9 144 490.3 119.6c21.9-21.9 21.9-57.3 0-79.2L471.6 21.7zm-299.2 220c-6.1 6.1-10.8 13.6-13.5 21.9l-29.6 88.8c-2.9 8.6-.6 18.1 5.8 24.6s15.9 8.7 24.6 5.8l88.8-29.6c8.2-2.7 15.7-7.4 21.9-13.5L432 177.9 334.1 80 172.4 241.7zM96 64C43 64 0 107 0 160L0 416c0 53 43 96 96 96l256 0c53 0 96-43 96-96l0-96c0-17.7-14.3-32-32-32s-32 14.3-32 32l0 96c0 17.7-14.3 32-32 32L96 448c-17.7 0-32-14.3-32-32l0-256c0-17.7 14.3-32 32-32l96 0c17.7 0 32-14.3 32-32s-14.3-32-32-32L96 64z"
            />
            <!---->
            <!---->
            <!---->
            
            <!---->
          </svg>
          <!---->
        </button>
      </div>
      <!---->
       
      <label
        class="jse-hidden-input-label svelte-10mlrw4"
      >
        <input
          class="jse-hidden-input svelte-10mlrw4"
          readonly=""
          tabindex="-1"
          type="text"
        />
      </label>
       
      <div
        class="jse-search-box-container svelte-10mlrw4"
      >
        <!---->
        
        <!---->
      </div>
       
      <div
        class="jse-contents svelte-10mlrw4"
        data-jsoneditor-scrollable-contents="true"
      >
        <!---->
         
        <div
          aria-selected="false"
          class="jse-json-node jse-expanded svelte-1qi6rc1 jse-root"
          data-path=""
          role="treeitem"
          style="--level: 0;"
          tabindex="-1"
        >
          <div
            class="jse-header-outer svelte-1qi6rc1"
          >
            <div
              class="jse-header svelte-1qi6rc1"
            >
              <button
                class="jse-expand svelte-1qi6rc1"
                title="Expand or collapse this array (Ctrl+Click to expand/collapse recursively)"
                type="button"
              >
                <svg
                  aria-label=""
                  class="fa-icon  svelte-v67cny"
                  height="16"
                  role="presentation"
                  style=""
                  version="1.1"
                  viewBox="0 0 320 512"
                  width="10"
                >
                  <!---->
                  <!---->
                  <path
                    d="M140.3 376.8c12.6 10.2 31.1 9.5 42.8-2.2l128-128c9.2-9.2 11.9-22.9 6.9-34.9S301.4 192 288.5 192l-256 0c-12.9 0-24.6 7.8-29.6 19.8S.7 237.5 9.9 246.6l128 128 2.4 2.2z"
                  />
                  <!---->
                  <!---->
                  <!---->
                  
                  <!---->
                </svg>
                <!---->
              </button>
               
              <!---->
               
              <!---->
               
              <div
                class="jse-meta svelte-1qi6rc1"
              >
                <div
                  class="jse-meta-inner svelte-1qi6rc1"
                  data-type="selectable-value"
                >
                  <div
                    class="jse-bracket svelte-1qi6rc1"
                  >
                    [
                  </div>
                   
                  <button
                    class="jse-tag svelte-ubve9r disabled"
                    type="button"
                  >
                    3
                items
                    <!---->
                  </button>
                  <!---->
                    
                  <!---->
                </div>
              </div>
               
              <!---->
            </div>
             
            <!---->
             
            <div
              class="jse-insert-selection-area jse-inside svelte-1qi6rc1"
              data-type="insert-selection-area-inside"
              role="none"
            />
            <!---->
          </div>
           
          <div
            class="jse-items svelte-1qi6rc1"
          >
            <!---->
             
            <!---->
            <!---->
            <div
              aria-selected="false"
              class="jse-json-node jse-expanded svelte-1qi6rc1"
              data-path="%2F0"
              role="treeitem"
              style="--level: 1;"
              tabindex="-1"
            >
              <!---->
              <div
                class="jse-header-outer svelte-1qi6rc1"
              >
                <div
                  class="jse-header svelte-1qi6rc1"
                >
                  <button
                    class="jse-expand svelte-1qi6rc1"
                    title="Expand or collapse this object (Ctrl+Click to expand/collapse recursively)"
                    type="button"
                  >
                    <svg
                      aria-label=""
                      class="fa-icon  svelte-v67cny"
                      height="16"
                      role="presentation"
                      style=""
                      version="1.1"
                      viewBox="0 0 320 512"
                      width="10"
                    >
                      <!---->
                      <!---->
                      <path
                        d="M140.3 376.8c12.6 10.2 31.1 9.5 42.8-2.2l128-128c9.2-9.2 11.9-22.9 6.9-34.9S301.4 192 288.5 192l-256 0c-12.9 0-24.6 7.8-29.6 19.8S.7 237.5 9.9 246.6l128 128 2.4 2.2z"
                      />
                      <!---->
                      <!---->
                      <!---->
                      
                      <!---->
                    </svg>
                    <!---->
                  </button>
                   
                  <div
                    class="jse-identifier svelte-1qi6rc1"
                    slot="identifier"
                  >
                    <div
                      class="jse-index svelte-1qi6rc1"
                    >
                      0
                    </div>
                  </div>
                  <!---->
                   
                  <div
                    class="jse-separator svelte-1qi6rc1"
                  >
                    :
                  </div>
                  <!---->
                   
                  <div
                    class="jse-meta svelte-1qi6rc1"
                    data-type="selectable-value"
                  >
                    <div
                      class="jse-meta-inner svelte-1qi6rc1"
                    >
                      <div
                        class="jse-bracket jse-expanded svelte-1qi6rc1"
                      >
                        {
                      </div>
                      <!---->
                    </div>
                  </div>
                   
                  <!---->
                </div>
                 
                <!---->
                 
                <div
                  class="jse-insert-selection-area jse-inside svelte-1qi6rc1"
                  data-type="insert-selection-area-inside"
                  role="none"
                />
                <!---->
              </div>
               
              <div
                class="jse-props svelte-1qi6rc1"
              >
                <!---->
                 
                <!---->
                <div
                  aria-selected="false"
                  class="jse-json-node svelte-1qi6rc1"
                  data-path="%2F0%2Fid"
                  role="treeitem"
                  style="--level: 2;"
                  tabindex="-1"
                >
                  <!---->
                  <div
                    class="jse-contents-outer svelte-1qi6rc1"
                  >
                    <div
                      class="jse-contents svelte-1qi6rc1"
                    >
                      <div
                        class="jse-key-outer svelte-1qi6rc1"
                        slot="identifier"
                      >
                        <!---->
                        <div
                          class="jse-key svelte-1n4cez4"
                          data-type="selectable-key"
                          role="none"
                        >
                          id
                          <!---->
                        </div>
                        <!---->
                         
                        <!---->
                        <!---->
                      </div>
                      <!---->
                       
                      <div
                        class="jse-separator svelte-1qi6rc1"
                      >
                        :
                      </div>
                      <!---->
                       
                      <div
                        class="jse-value-outer svelte-1qi6rc1"
                      >
                        <!---->
                        <!---->
                        <!---->
                        <div
                          class="jse-value jse-number svelte-1saqp8c"
                          data-type="selectable-value"
                          role="button"
                          tabindex="-1"
                        >
                          1
                          <!---->
                           
                          <!---->
                        </div>
                        
                        
                        
                        <!---->
                      </div>
                       
                      <!---->
                    </div>
                     
                    <!---->
                     
                    <div
                      class="jse-insert-selection-area jse-after svelte-1qi6rc1"
                      data-type="insert-selection-area-after"
                      role="none"
                    />
                    <!---->
                  </div>
                  
                  <!---->
                   
                  <!---->
                </div>
                
                <!---->
              </div>
               
              <div
                class="jse-footer-outer svelte-1qi6rc1"
              >
                <div
                  class="jse-footer svelte-1qi6rc1"
                  data-type="selectable-value"
                >
                  <div
                    class="jse-bracket svelte-1qi6rc1"
                  >
                    }
                  </div>
                </div>
                 
                <div
                  class="jse-insert-selection-area jse-after svelte-1qi6rc1"
                  data-type="insert-selection-area-after"
                  role="none"
                />
                <!---->
              </div>
              <!---->
              
              <!---->
               
              <!---->
            </div>
            
            <!---->
            <div
              aria-selected="false"
              class="jse-json-node jse-expanded svelte-1qi6rc1"
              data-path="%2F1"
              role="treeitem"
              style="--level: 1;"
              tabindex="-1"
            >
              <!---->
              <div
                class="jse-header-outer svelte-1qi6rc1"
              >
                <div
                  class="jse-header svelte-1qi6rc1"
                >
                  <button
                    class="jse-expand svelte-1qi6rc1"
                    title="Expand or collapse this object (Ctrl+Click to expand/collapse recursively)"
                    type="button"
                  >
                    <svg
                      aria-label=""
                      class="fa-icon  svelte-v67cny"
                      height="16"
                      role="presentation"
                      style=""
                      version="1.1"
                      viewBox="0 0 320 512"
                      width="10"
                    >
                      <!---->
                      <!---->
                      <path
                        d="M140.3 376.8c12.6 10.2 31.1 9.5 42.8-2.2l128-128c9.2-9.2 11.9-22.9 6.9-34.9S301.4 192 288.5 192l-256 0c-12.9 0-24.6 7.8-29.6 19.8S.7 237.5 9.9 246.6l128 128 2.4 2.2z"
                      />
                      <!---->
                      <!---->
                      <!---->
                      
                      <!---->
                    </svg>
                    <!---->
                  </button>
                   
                  <div
                    class="jse-identifier svelte-1qi6rc1"
                    slot="identifier"
                  >
                    <div
                      class="jse-index svelte-1qi6rc1"
                    >
                      1
                    </div>
                  </div>
                  <!---->
                   
                  <div
                    class="jse-separator svelte-1qi6rc1"
                  >
                    :
                  </div>
                  <!---->
                   
                  <div
                    class="jse-meta svelte-1qi6rc1"
                    data-type="selectable-value"
                  >
                    <div
                      class="jse-meta-inner svelte-1qi6rc1"
                    >
                      <div
                        class="jse-bracket jse-expanded svelte-1qi6rc1"
                      >
                        {
                      </div>
                      <!---->
                    </div>
                  </div>
                   
                  <!---->
                </div>
                 
                <!---->
                 
                <div
                  class="jse-insert-selection-area jse-inside svelte-1qi6rc1"
                  data-type="insert-selection-area-inside"
                  role="none"
                />
                <!---->
              </div>
               
              <div
                class="jse-props svelte-1qi6rc1"
              >
                <!---->
                 
                <!---->
                <div
                  aria-selected="false"
                  class="jse-json-node svelte-1qi6rc1"
                  data-path="%2F1%2Fid"
                  role="treeitem"
                  style="--level: 2;"
                  tabindex="-1"
                >
                  <!---->
                  <div
                    class="jse-contents-outer svelte-1qi6rc1"
                  >
                    <div
                      class="jse-contents svelte-1qi6rc1"
                    >
                      <div
                        class="jse-key-outer svelte-1qi6rc1"
                        slot="identifier"
                      >
                        <!---->
                        <div
                          class="jse-key svelte-1n4cez4"
                          data-type="selectable-key"
                          role="none"
                        >
                          id
                          <!---->
                        </div>
                        <!---->
                         
                        <!---->
                        <!---->
                      </div>
                      <!---->
                       
                      <div
                        class="jse-separator svelte-1qi6rc1"
                      >
                        :
                      </div>
                      <!---->
                       
                      <div
                        class="jse-value-outer svelte-1qi6rc1"
                      >
                        <!---->
                        <!---->
                        <!---->
                        <div
                          class="jse-value jse-number svelte-1saqp8c"
                          data-type="selectable-value"
                          role="button"
                          tabindex="-1"
                        >
                          2
                          <!---->
                           
                          <!---->
                        </div>
                        
                        
                        
                        <!---->
                      </div>
                       
                      <!---->
                    </div>
                     
                    <!---->
                     
                    <div
                      class="jse-insert-selection-area jse-after svelte-1qi6rc1"
                      data-type="insert-selection-area-after"
                      role="none"
                    />
                    <!---->
                  </div>
                  
                  <!---->
                   
                  <!---->
                </div>
                
                <!---->
                <div
                  aria-selected="false"
                  class="jse-json-node svelte-1qi6rc1"
                  data-path="%2F1%2Fname"
                  role="treeitem"
                  style="--level: 2;"
                  tabindex="-1"
                >
                  <!---->
                  <div
                    class="jse-contents-outer svelte-1qi6rc1"
                  >
                    <div
                      class="jse-contents svelte-1qi6rc1"
                    >
                      <div
                        class="jse-key-outer svelte-1qi6rc1"
                        slot="identifier"
                      >
                        <!---->
                        <div
                          class="jse-key svelte-1n4cez4"
                          data-type="selectable-key"
                          role="none"
                        >
                          name
                          <!---->
                        </div>
                        <!---->
                         
                        <!---->
                        <!---->
                      </div>
                      <!---->
                       
                      <div
                        class="jse-separator svelte-1qi6rc1"
                      >
                        :
                      </div>
                      <!---->
                       
                      <div
                        class="jse-value-outer svelte-1qi6rc1"
                      >
                        <!---->
                        <!---->
                        <!---->
                        <div
                          class="jse-value jse-string svelte-1saqp8c"
                          data-type="selectable-value"
                          role="button"
                          tabindex="-1"
                        >
                          Joe
                          <!---->
                           
                          <!---->
                        </div>
                        
                        
                        
                        <!---->
                      </div>
                       
                      <!---->
                    </div>
                     
                    <!---->
                     
                    <div
                      class="jse-insert-selection-area jse-after svelte-1qi6rc1"
                      data-type="insert-selection-area-after"
                      role="none"
                    />
                    <!---->
                  </div>
                  
                  <!---->
                   
                  <!---->
                </div>
                
                <!---->
              </div>
               
              <div
                class="jse-footer-outer svelte-1qi6rc1"
              >
                <div
                  class="jse-footer svelte-1qi6rc1"
                  data-type="selectable-value"
                >
                  <div
                    class="jse-bracket svelte-1qi6rc1"
                  >
                    }
                  </div>
                </div>
                 
                <div
                  class="jse-insert-selection-area jse-after svelte-1qi6rc1"
                  data-type="insert-selection-area-after"
                  role="none"
                />
                <!---->
              </div>
              <!---->
              
              <!---->
               
              <!---->
            </div>
            
            <!---->
            <div
              aria-selected="false"
              class="jse-json-node jse-expanded svelte-1qi6rc1"
              data-path="%2F2"
              role="treeitem"
              style="--level: 1;"
              tabindex="-1"
            >
              <!---->
              <div
                class="jse-header-outer svelte-1qi6rc1"
              >
                <div
                  class="jse-header svelte-1qi6rc1"
                >
                  <button
                    class="jse-expand svelte-1qi6rc1"
                    title="Expand or collapse this object (Ctrl+Click to expand/collapse recursively)"
                    type="button"
                  >
                    <svg
                      aria-label=""
                      class="fa-icon  svelte-v67cny"
                      height="16"
                      role="presentation"
                      style=""
                      version="1.1"
                      viewBox="0 0 320 512"
                      width="10"
                    >
                      <!---->
                      <!---->
                      <path
                        d="M140.3 376.8c12.6 10.2 31.1 9.5 42.8-2.2l128-128c9.2-9.2 11.9-22.9 6.9-34.9S301.4 192 288.5 192l-256 0c-12.9 0-24.6 7.8-29.6 19.8S.7 237.5 9.9 246.6l128 128 2.4 2.2z"
                      />
                      <!---->
                      <!---->
                      <!---->
                      
                      <!---->
                    </svg>
                    <!---->
                  </button>
                   
                  <div
                    class="jse-identifier svelte-1qi6rc1"
                    slot="identifier"
                  >
                    <div
                      class="jse-index svelte-1qi6rc1"
                    >
                      2
                    </div>
                  </div>
                  <!---->
                   
                  <div
                    class="jse-separator svelte-1qi6rc1"
                  >
                    :
                  </div>
                  <!---->
                   
                  <div
                    class="jse-meta svelte-1qi6rc1"
                    data-type="selectable-value"
                  >
                    <div
                      class="jse-meta-inner svelte-1qi6rc1"
                    >
                      <div
                        class="jse-bracket jse-expanded svelte-1qi6rc1"
                      >
                        {
                      </div>
                      <!---->
                    </div>
                  </div>
                   
                  <!---->
                </div>
                 
                <!---->
                 
                <div
                  class="jse-insert-selection-area jse-inside svelte-1qi6rc1"
                  data-type="insert-selection-area-inside"
                  role="none"
                />
                <!---->
              </div>
               
              <div
                class="jse-props svelte-1qi6rc1"
              >
                <!---->
                 
                <!---->
                <div
                  aria-selected="false"
                  class="jse-json-node svelte-1qi6rc1"
                  data-path="%2F2%2Fid"
                  role="treeitem"
                  style="--level: 2;"
                  tabindex="-1"
                >
                  <!---->
                  <div
                    class="jse-contents-outer svelte-1qi6rc1"
                  >
                    <div
                      class="jse-contents svelte-1qi6rc1"
                    >
                      <div
                        class="jse-key-outer svelte-1qi6rc1"
                        slot="identifier"
                      >
                        <!---->
                        <div
                          class="jse-key svelte-1n4cez4"
                          data-type="selectable-key"
                          role="none"
                        >
                          id
                          <!---->
                        </div>
                        <!---->
                         
                        <!---->
                        <!---->
                      </div>
                      <!---->
                       
                      <div
                        class="jse-separator svelte-1qi6rc1"
                      >
                        :
                      </div>
                      <!---->
                       
                      <div
                        class="jse-value-outer svelte-1qi6rc1"
                      >
                        <!---->
                        <!---->
                        <!---->
                        <div
                          class="jse-value jse-number svelte-1saqp8c"
                          data-type="selectable-value"
                          role="button"
                          tabindex="-1"
                        >
                          3
                          <!---->
                           
                          <!---->
                        </div>
                        
                        
                        
                        <!---->
                      </div>
                       
                      <!---->
                    </div>
                     
                    <!---->
                     
                    <div
                      class="jse-insert-selection-area jse-after svelte-1qi6rc1"
                      data-type="insert-selection-area-after"
                      role="none"
                    />
                    <!---->
                  </div>
                  
                  <!---->
                   
                  <!---->
                </div>
                
                <!---->
              </div>
               
              <div
                class="jse-footer-outer svelte-1qi6rc1"
              >
                <div
                  class="jse-footer svelte-1qi6rc1"
                  data-type="selectable-value"
                >
                  <div
                    class="jse-bracket svelte-1qi6rc1"
                  >
                    }
                  </div>
                </div>
                 
                <div
                  class="jse-insert-selection-area jse-after svelte-1qi6rc1"
                  data-type="insert-selection-area-after"
                  role="none"
                />
                <!---->
              </div>
              <!---->
              
              <!---->
               
              <!---->
            </div>
            
            <!---->
             
            <!---->
            <!---->
          </div>
           
          <div
            class="jse-footer-outer svelte-1qi6rc1"
          >
            <div
              class="jse-footer svelte-1qi6rc1"
              data-type="selectable-value"
            >
              <span
                class="jse-bracket svelte-1qi6rc1"
              >
                ]
              </span>
            </div>
             
            <!---->
          </div>
          <!---->
          <!---->
           
          <!---->
        </div>
        <!---->
      </div>
       
      <!---->
       
      <!---->
       
      <!---->
       
      <!---->
      
      <!---->
      <!---->
      <!---->
    </div>
     
    <!---->
     
    <!---->
    
    
    <!---->
  </div>
   
  <!---->
   
  <!---->
   
  <!---->
  <!---->
  
</div>
`;
